# code_image_to_text

./: .gitignore  README.md  code_recognizer.py  pyproject.toml  requirements.txt  test_code_recognizer.py
image_converter/: __main__.py  code_recognizer.py
