[tool.poetry]
name = "code-image-to-text"
version = "0.1.3"
description = "Convert code image to text"
authors = ["khuyentran1401 <khuyentran1476@gmail.com>"]
homepage = "https://github.com/khuyentran1401/code_image_to_text"
repository = "https://github.com/khuyentran1401/code_image_to_text"
keywords = ["computer vision", "code"]
readme = "README.md"
license = "Apache-2.0"
packages = [
    { include = "image_converter"},
]

[tool.poetry.dependencies]
python = "^3.7.1"
opencv-python = "^4.5.2"
pytesseract = "^0.3.7"
rich = "^10.2.2"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
icecream = "^2.1.0"
loguru = "^0.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
